--- a/src/Styles/PDP.css
+++ b/src/Styles/PDP.css
@@ -1,7 +1,7 @@
 .ProductDisplayPage {
   display: flex;
   justify-content: center;
-  padding: 150px 0 0 0;
+  padding: 150px 0 200px;
   flex-wrap: wrap;
 }
 .ProductDisplayPage .productGalleryContainer {
@@ -121,6 +121,7 @@
   width: 100%;
   padding: 16px 32px;
   border: 2px solid #5ECE7B;
+  margin: 0 0 25px;
 }
 .ProductDisplayPage .productInfoContainer .productAddToCartButton:hover {
   background-color: white;
